# covid-19

./: Cargo.toml
src/: main.rs
src/api/: confirmed.rs  countries.rs  deaths.rs  global.rs  mod.rs  recovered.rs
src/config/: app.rs
src/utils/: endpoint.rs  fetcher.rs  mod.rs  query.rs
