[package]
name = "covid-19"
version = "0.1.0"
authors = ["Wilbros <willy.brordus.law@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-cors = "0.2.0"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
log = "0.4.8"
curl = "0.4.28"
listenfd = "0.3"
url = "2.1.1"
